force-app/main/default/objects/Medical_Appointment__c/fields/Appointment_Id__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Id__c</fullName>
    <label>Appointment Id</label>
    <type>AutoNumber</type>
</CustomField>