force-app/main/default/objects/Medical_Appointment__c/fields/Appointment_Status__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Status__c</fullName>
    <label>Appointment Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Upcoming</fullName>
                <default>true</default>
                <label>Upcoming</label>
            </value>
            <value>
                <fullName>Made</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>