force-app/main/default/objects/Medical_Appointment__c/fields/Doctor__c.field-meta.xml
<CustomField>
    <fullName>Doctor__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Doctor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Person__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>&quot;Doctor&quot;</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Person__c</referenceTo>
    <relationshipLabel>Medical Appointments</relationshipLabel>
    <relationshipName>Medical_Appointments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>